Frontend - Fix Header visible after logout

--- a/front/src/app/features/posts/detail/post-detail.component.scss
+++ b/front/src/app/features/posts/detail/post-detail.component.scss
@@ -93,7 +93,7 @@
         }
       }
   }
-  @media (max-width: 576px) {
+  @media (max-width: 768px) {
   .post-detail-container {
     padding: 0px;
     margin: 0 1.5rem;
